# torrentula

./: LICENSE  Readme.md  cabal.sandbox.config  torrentula.cabal
src/: Main.hs  MetaInfo.hs  Metainfo.hs
