name:                torrentula
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              AS
maintainer:          nikuda@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, Readme.md
cabal-version:       >=1.10

library
  exposed-modules:     Metainfo
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12, network-uri >=2.6 && <2.7
  hs-source-dirs:      src
  default-language:    Haskell2010

executable torrentula
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12,
                       network-uri >=2.6 && <2.7,
                       bencoding >=0.4.4 && <0.4.5,
                       bytestring >=0.10.8 && <0.10.9
  hs-source-dirs:      src
  default-language:    Haskell2010
