name:                torrentula
version:             0.1.0.0
synopsis:            BitTorrent Client
description:         Download warez through BitTorrent :^)
license:             BSD3
license-file:        LICENSE
author:              AS
maintainer:          nikuda@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, Readme.md
cabal-version:       >=1.10

executable torrentula
  main-is:             Main.hs
  other-modules:       MetaInfo
  build-depends:       base >=4.11
                     , network-uri >=2.6
                     , bencoding >=0.4.4
                     , bytestring >=0.10.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
